create StatisticServiceTest1